--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "circomlibjs": "^0.1.2"
+  },
   "devDependencies": {
     "circomlib": "^2.0.3",
     "hardhat": "^2.9.1",
